issue5 closed: jump episode

--- a/css/app.sass
+++ b/css/app.sass
@@ -38,7 +38,8 @@ img.loading
         width: $setting-width - 30px
         overflow: scroll
 
-        
+    .save-button
+      width: 140px
 
 .video
   width: 100%
